--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
   </head>
  <body>
-   <div class="aaa">
+   <header class="aaa">
      <img src="./eisenhower-matrix.jpg">
      <a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
-   </div>
-   <div class="centered-main-page-element">
+   </header>
+   <main class="centered-main-page-element">
     <div id='topSectionForAddingElementToList'>
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
@@ -47,7 +47,7 @@
                 <img src="./remove.svg"></button>
           </li>
         </ul>
-      </div>
+      </main>
       <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
