--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
  <body>
    <header class="aaa">
-     <img src="./eisenhower-matrix.jpg" >
+     <img src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
      <a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
    </header>
    <main class="centered-main-page-element">
@@ -26,7 +26,7 @@
            <input type="text" class="task">
            <button class="edit">Edit</button>
            <button class="delete">
-             <img src="./remove.svg"></button>
+             <img src="./remove.svg" alt="remove button"></button>
          </li>
           <li class="editMode">
             <input type="checkbox">
@@ -34,7 +34,7 @@
             <input type="text" value="Go Shopping" class="task">
             <button class='edit'>Save</button>
             <button class="delete">
-                <img src="./remove.svg"></button>
+                <img src="./remove.svg" alt="remove button"></button>
           </li>
          </ul>
          <h3>Completed</h3><ul id="completed-tasks">
@@ -44,7 +44,7 @@
               <input type="text" class="task">
               <button class="edit">Edit</button>
               <button class="delete">
-                <img src="./remove.svg"></button>
+                <img src="./remove.svg" alt="remove button"></button>
           </li>
         </ul>
       </main>
